--- a/apps/diversifi/package.json
+++ b/apps/diversifi/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stable-station/shared": "workspace:*",
     "@stable-station/mento-utils": "workspace:*",
     "autoprefixer": "^10.4.0",
     "chart.js": "^4.4.9",
@@ -19,8 +20,13 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.0",
-    "viem": "^2.0.0",
-    "wagmi": "^2.0.0"
+    "viem": "2.23.15",
+    "wagmi": "^2.0.0",
+    "papaparse": "^5.4.1",
+    "prosemirror-model": "^1.19.0",
+    "prosemirror-schema-basic": "^1.2.0",
+    "prosemirror-schema-list": "^1.3.0",
+    "prosemirror-state": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
