--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@safe-global/protocol-kit": "^5.2.1",
+    "@stable-station/shared": "workspace:*",
     "@tanstack/react-query": "^5.72.2",
     "@types/d3": "^7.4.3",
     "@uiw/react-heat-map": "^2.3.2",
@@ -73,12 +74,6 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
-    "@visx/gradient": "^3.12.0",
-    "@visx/group": "^3.12.0",
-    "@visx/pattern": "^3.12.0",
-    "@visx/scale": "^3.12.0",
-    "@visx/shape": "^3.12.0",
-    "@visx/text": "^3.12.0",
     "@zoralabs/protocol-sdk": "^0.13.2",
     "ai": "4.1.24",
     "bcrypt-ts": "^5.0.2",
@@ -88,17 +83,14 @@
     "codemirror": "^6.0.1",
     "connectkit": "^1.8.2",
     "d3": "^7.9.0",
-    "d3-scale": "^4.0.2",
-    "datamaps": "^0.5.9",
     "date-fns": "^4.1.0",
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
-    "ethers": "^5.7",
+    "ethers": "^6.15.0",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.18.2",
     "geist": "^1.3.1",
-    "html2canvas": "^1.4.1",
     "jose": "^5.9.6",
     "lucide-react": "^0.446.0",
     "moralis": "^2.27.2",
@@ -107,25 +99,24 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "orderedmap": "^2.1.1",
-    "papaparse": "^5.5.2",
+    "papaparse": "^5.5.3",
     "pg": "^8.14.1",
     "pino": "^7.11.0",
     "pino-pretty": "^10.3.1",
     "postgres": "^3.4.4",
     "prosemirror-example-setup": "^1.2.3",
-    "prosemirror-inputrules": "^1.4.0",
-    "prosemirror-markdown": "^1.13.1",
-    "prosemirror-model": "^1.23.0",
-    "prosemirror-schema-basic": "^1.2.3",
-    "prosemirror-schema-list": "^1.4.1",
+    "prosemirror-inputrules": "^1.5.0",
+    "prosemirror-markdown": "^1.13.2",
+    "prosemirror-model": "^1.25.3",
+    "prosemirror-schema-basic": "^1.2.4",
+    "prosemirror-schema-list": "^1.5.1",
     "prosemirror-state": "^1.4.3",
-    "prosemirror-view": "^1.34.3",
+    "prosemirror-view": "^1.40.1",
     "react": "^19.0.0",
     "react-data-grid": "7.0.0-beta.47",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
-    "react-simple-maps": "^3.0.0",
     "react-spring": "^9.7.5",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
@@ -145,15 +136,13 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/d3-scale": "^4.0.8",
     "@types/node": "^22.8.6",
-    "@types/papaparse": "^5.3.15",
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-simple-maps": "^3.0.6",
     "autoprefixer": "^10.4.21",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
-    "drizzle-kit": "^0.25.0",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
