--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "db:check": "drizzle-kit check",
     "db:up": "drizzle-kit up",
     "db:seed": "pnpm tsx scripts/db/seed.ts",
-    "db:seed:stable": "pnpm tsx scripts/db/seed-stable-station.ts",
+    "db:seed:diversifi": "pnpm tsx scripts/db/seed-diversifi.ts",
     "fix:viem": "node scripts/utils/update-viem-version.js",
     "fix:tailwind": "node scripts/fixes/fix-tailwind-classes.js",
     "fix:web3-provider": "node scripts/fixes/fix-web3-provider.js",
@@ -66,7 +66,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@safe-global/protocol-kit": "^5.2.1",
-    "@stable-station/shared": "workspace:*",
+    "@diversifi/shared": "workspace:*",
     "@tanstack/react-query": "^5.72.2",
     "@types/d3": "^7.4.3",
     "@uiw/react-heat-map": "^2.3.2",
