--- a/apps/diversifi/package.json
+++ b/apps/diversifi/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stable-station/shared": "workspace:*",
-    "@stable-station/mento-utils": "workspace:*",
+    "@diversifi/shared": "workspace:*",
+    "@diversifi/mento-utils": "workspace:*",
     "autoprefixer": "^10.4.0",
     "chart.js": "^4.4.9",
     "ethers": "^5.7",
