--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stable-station/api",
+  "name": "@diversifi/api",
   "version": "0.1.0",
   "private": true,
   "main": "dist/index.js",
