--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stable-station/config",
+  "name": "@diversifi/config",
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
