--- a/packages/mento-utils/package.json
+++ b/packages/mento-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stable-station/mento-utils",
+  "name": "@diversifi/mento-utils",
   "version": "0.1.0",
   "private": true,
   "main": "dist/index.js",
