--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stable-station/shared",
+  "name": "@diversifi/shared",
   "version": "0.1.0",
   "private": true,
   "main": "dist/index.js",
