--- a/apps/diversifi/package.json
+++ b/apps/diversifi/package.json
@@ -9,31 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@diversifi/shared": "workspace:*",
     "@diversifi/mento-utils": "workspace:*",
+    "@diversifi/shared": "workspace:*",
     "autoprefixer": "^10.4.0",
     "chart.js": "^4.4.9",
-    "ethers": "^5.7",
+    "ethers": "5.7.2",
     "next": "^14.0.0",
-    "postcss": "^8.4.0",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.0",
-    "viem": "2.23.15",
-    "wagmi": "^2.0.0",
     "papaparse": "^5.4.1",
+    "postcss": "^8.4.0",
     "prosemirror-model": "^1.19.0",
     "prosemirror-schema-basic": "^1.2.0",
     "prosemirror-schema-list": "^1.3.0",
-    "prosemirror-state": "^1.4.0"
+    "prosemirror-state": "^1.4.0",
+    "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.3.0",
+    "viem": "1.21.4",
+    "wagmi": "1.4.13"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "typescript": "^5.0.0"
+    "stream-browserify": "^3.0.0",
+    "typescript": "^5.0.0",
+    "util": "^0.12.5"
   }
 }
