--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "@codemirror/view": "^6.35.3",
     "@coinbase/agentkit": "0.1.2",
     "@coinbase/coinbase-sdk": "^0.22.0",
-    "@coinbase/onchainkit": "github:azf20/onchainkit#534f302c60da4ab9a2f95187c04a67be062ad4a9",
+    "@coinbase/onchainkit": "^0.38.19",
+    "@diversifi/shared": "workspace:*",
     "@farcaster/frame-sdk": "0.0.37",
     "@mento-protocol/mento-sdk": "^1.0.7",
+    "@noble/hashes": "^2.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -66,7 +68,6 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@safe-global/protocol-kit": "^5.2.1",
-    "@diversifi/shared": "workspace:*",
     "@tanstack/react-query": "^5.72.2",
     "@types/d3": "^7.4.3",
     "@uiw/react-heat-map": "^2.3.2",
@@ -74,6 +75,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
+    "@wagmi/core": "^2.20.3",
     "@zoralabs/protocol-sdk": "^0.13.2",
     "ai": "4.1.24",
     "bcrypt-ts": "^5.0.2",
@@ -81,13 +83,13 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
-    "connectkit": "^1.8.2",
+    "connectkit": "1.9.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
-    "ethers": "^6.15.0",
+    "ethers": "6.15.0",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.18.2",
     "geist": "^1.3.1",
@@ -120,6 +122,7 @@
     "react-spring": "^9.7.5",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
+    "siwe": "^3.0.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
@@ -127,8 +130,8 @@
     "twitter-api-v2": "^1.19.0",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.1.0",
-    "viem": "2.23.15",
-    "wagmi": "^2.14.15",
+    "viem": "2.37.4",
+    "wagmi": "2.16.9",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -155,5 +158,9 @@
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "util": "^0.12.5"
+  },
+  "resolutions": {
+    "viem": "1.21.4",
+    "@noble/hashes": "^2.0.0"
   }
 }
