removed unneccessary bloat

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pnpm install --no-frozen-lockfile && pnpm add -D -w stream-browserify buffer crypto-browserify util && pnpm build"
+  command = "pnpm install --no-frozen-lockfile && pnpm add -D -w stream-browserify buffer crypto-browserify util @noble/hashes && pnpm build"
   publish = ".next"
 
 [build.environment]
