--- a/apps/diversifi/package.json
+++ b/apps/diversifi/package.json
@@ -24,9 +24,7 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.3.0",
-    "viem": "1.21.4",
-    "wagmi": "1.4.13"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
