--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
   "dependencies": {
     "@ai-sdk/fireworks": "^0.1.8",
     "@ai-sdk/openai": "1.1.9",
-    "@allbridge/bridge-core-sdk": "^3.21.1",
-    "@brian-ai/sdk": "^0.3.7",
     "@celo/contractkit": "^9.2.1",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
@@ -48,12 +46,11 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.35.3",
     "@coinbase/agentkit": "0.1.2",
-    "@coinbase/coinbase-sdk": "^0.22.0",
     "@coinbase/onchainkit": "^0.38.19",
     "@diversifi/shared": "workspace:*",
     "@farcaster/frame-sdk": "0.0.37",
     "@mento-protocol/mento-sdk": "^1.0.7",
-    "@noble/hashes": "^2.0.0",
+    "@noble/hashes": "1.7.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -89,7 +86,7 @@
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
-    "ethers": "6.15.0",
+    "ethers": "5.7.2",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.18.2",
     "geist": "^1.3.1",
@@ -160,7 +157,12 @@
     "util": "^0.12.5"
   },
   "resolutions": {
-    "viem": "1.21.4",
-    "@noble/hashes": "^2.0.0"
+    "viem": "2.37.4",
+    "connectkit": "1.9.1",
+    "@base-org/account": "1.1.1",
+    "@noble/hashes": "1.7.1",
+    "@noble/curves": "1.9.7",
+    "@scure/bip32": "1.7.0",
+    "@noble/secp256k1": "1.7.2"
   }
 }
