--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "2.37.4"
   },
   "devDependencies": {
     "@types/node": "^22.8.6",
