fix: resolve Netlify build failures with @noble packages
- Add strict version overrides for @noble/hashes@1.7.1 and @noble/curves@1.9.7
- Create fix-noble-packages.js script to patch missing exports
- Update Next.js configs with proper noble package path resolution
- Add @noble/hashes/legacy alias for compatibility
- Update Netlify build command to run fixes before building
- Remove deprecated patch-noble-hashes.js script

Fixes module resolution errors:
- Package path ./hmac.js not exported
- Package path ./sha2.js not exported
- Package path ./utils.js not exported
- Can't resolve '@noble/hashes/legacy'

This should resolve the Netlify build failures and allow successful deployment.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pnpm install --no-frozen-lockfile && pnpm add -D -w stream-browserify buffer crypto-browserify util @noble/hashes && pnpm build"
+  command = "pnpm install --no-frozen-lockfile && pnpm add -D -w stream-browserify buffer crypto-browserify util @noble/hashes && node scripts/fixes/fix-noble-packages.js && pnpm build"
   publish = ".next"
 
 [build.environment]
