--- a/package.json
+++ b/package.json
@@ -34,75 +34,76 @@
     "fix:tailwind": "node scripts/fixes/fix-tailwind-classes.js",
     "fix:web3-provider": "node scripts/fixes/fix-web3-provider.js",
     "fix:frame-paths": "node scripts/fixes/fix-frame-path-aliases.js",
-    "fix:all": "node scripts/fixes/fix-all.js"
+    "fix:all": "node scripts/fixes/fix-all.js",
+    "postinstall": "node scripts/fixes/fix-viem-version.js && node scripts/fixes/fix-noble-packages.js"
   },
   "dependencies": {
-    "@ai-sdk/fireworks": "^0.1.8",
-    "@ai-sdk/openai": "1.1.9",
-    "@celo/contractkit": "^9.2.1",
-    "@codemirror/lang-javascript": "^6.2.2",
-    "@codemirror/lang-python": "^6.1.6",
-    "@codemirror/state": "^6.5.0",
-    "@codemirror/theme-one-dark": "^6.1.2",
-    "@codemirror/view": "^6.35.3",
-    "@coinbase/agentkit": "0.1.2",
+    "@ai-sdk/fireworks": "^1.0.15",
+    "@ai-sdk/openai": "2.0.26",
+    "@celo/contractkit": "^10.0.1",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.2",
+    "@coinbase/agentkit": "0.10.1",
     "@coinbase/onchainkit": "^0.38.19",
     "@diversifi/shared": "workspace:*",
-    "@farcaster/frame-sdk": "0.0.37",
-    "@mento-protocol/mento-sdk": "^1.0.7",
+    "@farcaster/frame-sdk": "0.1.10",
+    "@mento-protocol/mento-sdk": "^1.10.3",
     "@noble/hashes": "1.7.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-progress": "^1.1.4",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.2.11",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@safe-global/protocol-kit": "^5.2.1",
-    "@tanstack/react-query": "^5.72.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
+    "@safe-global/protocol-kit": "^6.1.1",
+    "@tanstack/react-query": "^5.87.1",
     "@types/d3": "^7.4.3",
-    "@uiw/react-heat-map": "^2.3.2",
-    "@upstash/redis": "^1.34.8",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/blob": "^0.24.1",
+    "@uiw/react-heat-map": "^2.3.3",
+    "@upstash/redis": "^1.35.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^1.1.1",
     "@vercel/postgres": "^0.10.0",
     "@wagmi/core": "^2.20.3",
-    "@zoralabs/protocol-sdk": "^0.13.2",
-    "ai": "4.1.24",
-    "bcrypt-ts": "^5.0.2",
-    "class-variance-authority": "^0.7.0",
+    "@zoralabs/protocol-sdk": "^0.13.11",
+    "ai": "5.0.35",
+    "bcrypt-ts": "^7.1.0",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "codemirror": "^6.0.1",
+    "codemirror": "^6.0.2",
     "connectkit": "1.9.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "diff-match-patch": "^1.0.5",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.41.0",
-    "ethers": "5.7.2",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
+    "ethers": "6.15.0",
     "fast-deep-equal": "^3.1.3",
-    "framer-motion": "^11.18.2",
-    "geist": "^1.3.1",
-    "jose": "^5.9.6",
-    "lucide-react": "^0.446.0",
+    "framer-motion": "^12.23.12",
+    "geist": "^1.5.1",
+    "jose": "^6.1.0",
+    "lucide-react": "^0.542.0",
     "moralis": "^2.27.2",
-    "nanoid": "^5.0.8",
-    "next": "15.2.0",
+    "nanoid": "^5.1.5",
+    "next": "15.5.2",
     "next-auth": "5.0.0-beta.25",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.6",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.3",
-    "pg": "^8.14.1",
-    "pino": "^7.11.0",
-    "pino-pretty": "^10.3.1",
-    "postgres": "^3.4.4",
+    "pg": "^8.16.3",
+    "pino": "^9.9.4",
+    "pino-pretty": "^13.1.1",
+    "postgres": "^3.4.7",
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-inputrules": "^1.5.0",
     "prosemirror-markdown": "^1.13.2",
@@ -110,50 +111,50 @@
     "prosemirror-schema-basic": "^1.2.4",
     "prosemirror-schema-list": "^1.5.1",
     "prosemirror-state": "^1.4.3",
-    "prosemirror-view": "^1.40.1",
-    "react": "^19.0.0",
-    "react-data-grid": "7.0.0-beta.47",
-    "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.1",
-    "react-resizable-panels": "^2.1.7",
-    "react-spring": "^9.7.5",
-    "remark-gfm": "^4.0.0",
+    "prosemirror-view": "^1.41.0",
+    "react": "^19.1.1",
+    "react-data-grid": "7.0.0-beta.57",
+    "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^3.0.5",
+    "react-spring": "^10.0.1",
+    "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "siwe": "^3.0.0",
-    "sonner": "^1.5.0",
-    "swr": "^2.2.5",
-    "tailwind-merge": "^2.5.2",
+    "sonner": "^2.0.7",
+    "swr": "^2.3.6",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "twitter-api-v2": "^1.19.0",
-    "usehooks-ts": "^3.1.0",
-    "uuid": "^11.1.0",
+    "twitter-api-v2": "^1.27.0",
+    "usehooks-ts": "^3.1.1",
+    "uuid": "^12.0.0",
     "viem": "2.37.4",
     "wagmi": "2.16.9",
-    "zod": "^3.23.8"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/d3-scale": "^4.0.8",
-    "@types/node": "^22.8.6",
-    "@types/pdf-parse": "^1.1.4",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@biomejs/biome": "2.2.3",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/d3-scale": "^4.0.9",
+    "@types/node": "^24.3.1",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "drizzle-kit": "^0.31.4",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-tailwindcss": "^3.17.5",
-    "postcss": "^8.5.3",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "15.5.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-tailwindcss": "^3.18.2",
+    "postcss": "^8.5.6",
     "stream-browserify": "^3.0.0",
-    "tailwindcss": "^3.4.1",
-    "tsup": "^8.4.0",
-    "tsx": "^4.19.1",
-    "typescript": "^5.6.3",
+    "tailwindcss": "^4.1.13",
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
     "util": "^0.12.5"
   },
   "resolutions": {
@@ -164,5 +165,12 @@
     "@noble/curves": "1.9.7",
     "@scure/bip32": "1.7.0",
     "@noble/secp256k1": "1.7.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "viem": "2.37.4",
+      "@noble/hashes": "1.7.1",
+      "@noble/curves": "1.9.7"
+    }
   }
 }
