--- a/apps/diversifi/package.json
+++ b/apps/diversifi/package.json
@@ -14,7 +14,7 @@
     "autoprefixer": "^10.4.0",
     "chart.js": "^4.4.9",
     "ethers": "5.7.2",
-    "next": "^14.0.0",
+    "next": "15.2.0",
     "papaparse": "^5.4.1",
     "postcss": "^8.4.0",
     "prosemirror-model": "^1.19.0",
@@ -27,9 +27,14 @@
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "babel-loader": "^10.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "eslint": "^8.0.0",
