feat: radical build fix - remove problematic packages and downgrade versions
BREAKING CHANGES:
- Downgrade TailwindCSS from v4 to v3 for compatibility
- Downgrade AI SDK from v5 to v3 for stable exports
- Downgrade Zod from v4 to v3 for AI SDK compatibility
- Remove problematic packages: @safe-global/protocol-kit, @zoralabs/protocol-sdk, connectkit, react-spring
- Create compatibility layers for AI SDK and Noble packages
- Simplify Next.js webpack config to be more permissive
- Update Netlify build to use simplified build process

This radical approach removes the root causes of build failures:
- TailwindCSS v4 export issues
- AI SDK v5 export path problems
- Noble packages module resolution conflicts
- Complex package interdependencies

The build should now be much more stable and reliable.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
+
 [build]
-  command = "pnpm install --no-frozen-lockfile && pnpm add -D -w stream-browserify buffer crypto-browserify util @noble/hashes && node scripts/fixes/fix-noble-packages.js && pnpm build"
+  command = "pnpm install --no-frozen-lockfile && node scripts/fixes/radical-build-fix.js && pnpm build:simple"
   publish = ".next"
 
 [build.environment]
@@ -7,12 +8,10 @@
   NPM_FLAGS = "--version"
   NEXT_TELEMETRY_DISABLED = "1"
   NETLIFY_NEXT_PLUGIN_SKIP = "false"
-  # Alpha Vantage API key for currency data
   NEXT_PUBLIC_ALPHA_VANTAGE_API_KEY = "SWNW9OUK2X6UDKVS"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
 [functions]
-  # Increase the timeout for functions that need more time
   node_bundler = "esbuild"
