--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
+    "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.87.1",
     "@types/d3": "^7.4.3",
     "@uiw/react-heat-map": "^2.3.3",
